--- a/index.html
+++ b/index.html
@@ -10,6 +10,77 @@
   </head>
 
   <body>
+    <nav class="navBar">
+      <img src="./assets/Recurso_2.png" alt="Logo Empresa">
+      <ul class="menu menuCel" id="menuCel">
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Nosotros</a></li>
+        <li><a href="#">Vida</a></li>
+        <li><a href="#">Promociones</a></li>
+        <li><a href="#">Faq's</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contacto</a></li>
+      </ul>
+      <div class="button" id="buttonMenu">
+        <span class="button_bar Bar1" id="bar1"></span>
+        <span class="button_bar Bar2" id="bar2"></span>
+        <span class="button_bar Bar3" id="bar3"></span>
+      </div>
+    </nav>
+
+    <header class="header">
+      <div class="container__slider">
+        <div class="slider" id="slider">
+          <div class="slider__section">
+            <img src="./assets/Recurso_1.png" alt="Personas">
+            <div class="textContainer">
+              <div class="textSlider">
+                <p class="textOne">Tenemos un seguro de vida</p>
+                <p class="textTwo">ideal para tí</p>
+                <a href="#">¡Cotiza ahora!</a>
+              </div>
+            </div>
+          </div>
+          <div class="slider__section">
+            <img src="http://placeimg.com/640/480/people" alt="Personas">
+            <div class="textContainer">
+              <div class="textSlider">
+                <p class="textOne">Tenemos un seguro de vida</p>
+                <p class="textTwo">ideal para tí</p>
+                <a href="#">¡Cotiza ahora!</a>
+              </div>
+            </div>
+          </div>
+          <div class="slider__section">
+            <img src="http://placeimg.com/640/480/people" alt="Personas">
+            <div class="textContainer">
+              <div class="textSlider">
+                <p class="textOne">Tenemos un seguro de vida</p>
+                <p class="textTwo">ideal para tí</p>
+                <a href="#">¡Cotiza ahora!</a>
+              </div>
+            </div>
+          </div>
+          <div class="slider__section">
+            <img src="http://placeimg.com/640/480/people" alt="Personas">
+            <div class="textContainer">
+              <div class="textSlider">
+                <p class="textOne">Tenemos un seguro de vida</p>
+                <p class="textTwo">ideal para tí</p>
+                <a href="#">¡Cotiza ahora!</a>
+              </div>
+            </div>
+          </div>
+        <div class="slider__btn slider__btn--right" id="btn-right"><span>&#62;</span></div>
+        <div class="slider__btn slider__btn--left" id="btn-left"><span>&#60;</span></div>
+      </div> <!-- container__slider div -->
+    </header>
+
+    <main>
+      <section>
+
+      </section>
+    </main>
 
     <script src="./script.js"></script>
 
