--- a/index.html
+++ b/index.html
@@ -77,8 +77,38 @@
     </header>
 
     <main>
-      <section>
-
+      <section class="beneficios">
+        <img src="./assets/Recurso_3.png" alt="Imágen">
+        <div class="beneficios__info">
+          <h1>Beneficios de usar Plan Life</h1>
+          <div class="beneficios__info-textLogo">
+            <div class="beneficios__info-logo">
+              <img src="./assets/Recurso_5.png" alt="Logos">
+              <img src="./assets/Recurso_6.png" alt="Logos">
+              <img src="./assets/Recurso_7.png" alt="Logos">
+              <img src="./assets/Recurso_8.png" alt="Logos">
+            </div>
+            <div class="beneficios__info-text">
+              <p class="title">Costo</p>
+              <p class="info">
+                Nuestra tecnología nos permite reducir costos y ofrecer tarifas competitivas.
+              </p>
+              <p class="title">Seguridad</p>
+              <p class="info">
+                Estamos certificados para proteger todas tus transacciones. <br> Asistencia a usuarios. Asistencia personalizada. Soporte.
+              </p>
+              <p class="title">Atención 24/7</p>
+              <p class="info">
+                Somos una empresa mexicana. Entendemos mejor que nadie tus necesidades.
+              </p>
+              <p class="title">Registro rápido y se class="info"ncillo</p>
+              <p class="info">
+                Regístrate y empieza a transaccionar en menos de 30 minutos.
+              </p>
+            </div>
+          </div>
+        </div>
+        <img class="figure" src="./assets/Recurso_4.png" alt="Figura">
       </section>
     </main>
 
