Sección cuida tu salud

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <p class="info">
                 Somos una empresa mexicana. Entendemos mejor que nadie tus necesidades.
               </p>
-              <p class="title">Registro rápido y se class="info"ncillo</p>
+              <p class="title">Registro rápido y sencillo</p>
               <p class="info">
                 Regístrate y empieza a transaccionar en menos de 30 minutos.
               </p>
@@ -109,7 +109,24 @@
           </div>
         </div>
         <img class="figure" src="./assets/Recurso_4.png" alt="Figura">
-      </section>
+      </section> <!-- beneficios section -->
+
+      <section class="cuidaSalud">
+        <h3>Que lo más importante sea tu salud, cuídala con nosotros.</h3>
+        <div class="cuidaSalud__info">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam reprehenderit odit quos porro doloremque ullam sunt aspernatur dicta! Iure sapiente tenetur eos at quas optio esse officiis vel eius, fuga culpa voluptates alias minima!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo impedit voluptate fuga numquam dolorem labore blanditiis porro repellat iusto, sunt neque ex sint nobis deleniti quibusdam ratione quod distinctio fugit velit hic. Atque, doloribus!</p>
+          <a href="#">Saber más</a>
+        </div>
+      </section> <!-- cuidaSalud section -->
+
+      <section class="cotiza">
+        <img src="" alt="">
+        <div class="cotiza__info">
+
+        </div>
+        <img src="" alt="">
+      </section> <!-- cotiza section -->
     </main>
 
     <script src="./script.js"></script>
