--- a/index.html
+++ b/index.html
@@ -121,13 +121,52 @@
       </section> <!-- cuidaSalud section -->
 
       <section class="cotiza">
-        <img src="" alt="">
+        <img src="./assets/Recurso_9.png" alt="Imagen">
         <div class="cotiza__info">
-
+          <h3>Que lo más importante sea tu salud, cuídala con nosotros.</h3>
+          <div class="cotiza__info-container">
+            <div class="cotiza__info-subContainer">
+              <img src="./assets/Recurso_10.png" alt="Logo">
+              <p>Responde algunas preguntas sencillas.</p>
+            </div>
+            <div class="cotiza__info-subContainer">
+              <img src="./assets/Recurso_11.png" alt="Logo">
+              <p>Obtenga precios en un instante*.</p>
+            </div>
+            <div class="cotiza__info-subContainer">
+              <img src="./assets/Recurso_12.png" alt="Logo">
+              <p>Inicie su solicitud en línea.</p>
+            </div>
+            <div class="cotiza__info-subContainer">
+              <img src="./assets/Recurso_13.png" alt="Logo">
+              <p>Profesionales con más de 50 años de experiencia en seguros.</p>
+            </div>
+          </div>
+          <a href="#">¡Cotiza ahora!</a>
         </div>
-        <img src="" alt="">
+        <img class="figura" src="./assets/Recurso_4.png" alt="Figura">
       </section> <!-- cotiza section -->
     </main>
+
+    <footer class="footer">
+      <img src="./assets/Recurso_14.png" alt="Logo">
+      <ul>
+        <li>Inicio</li>
+        <li>Nosotros</li>
+        <li>Vida</li>
+        <li>Promociones</li>
+      </ul>
+      <ul>
+        <li>Faq's</li>
+        <li>Blog</li>
+        <li>Aviso de privacidad</li>
+        <li>Contacto</li>
+      </ul>
+      <div>
+        <p>Redes sociales</p>
+        <div><a href="#"></a><a href="#"></a><a href="#"></a><a href="#"></a></div>
+      </div>
+    </footer>
 
     <script src="./script.js"></script>
 
