--- a/index.html
+++ b/index.html
@@ -162,9 +162,14 @@
         <li>Aviso de privacidad</li>
         <li>Contacto</li>
       </ul>
-      <div>
+      <div class="redes">
         <p>Redes sociales</p>
-        <div><a href="#"></a><a href="#"></a><a href="#"></a><a href="#"></a></div>
+        <div class="redes__container">
+          <a href="#"></a>
+          <a href="#"></a>
+          <a href="#"></a>
+          <a href="#"></a>
+        </div>
       </div>
     </footer>
 
