--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
     <footer class="footer">
       <img src="./assets/Recurso_14.png" alt="Logo">
       <ul>
-        <li>Inicio</li>
-        <li>Nosotros</li>
-        <li>Vida</li>
-        <li>Promociones</li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Nosotros</a></li>
+        <li><a href="#">Vida</a></li>
+        <li><a href="#">Promociones</a></li>
       </ul>
       <ul>
-        <li>Faq's</li>
-        <li>Blog</li>
-        <li>Aviso de privacidad</li>
-        <li>Contacto</li>
+        <li><a href="#">Faq's</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Aviso de privacidad</a></li>
+        <li><a href="#">Contacto</a></li>
       </ul>
       <div class="redes">
         <p>Redes sociales</p>
