Animación barra de menú

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <nav class="navBar">
+    <nav class="navBar" id="navBar">
       <img src="./assets/Recurso_2.png" alt="Logo Empresa">
       <ul class="menu menuCel" id="menuCel">
         <li><a href="#">Inicio</a></li>
